--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <title></title>
+    <title>Spectacle Store</title>
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -24,7 +24,7 @@
     <script src="js/factory.js"></script>
   </head>
 
-  <body ng-app="BookStoreApp">
+  <body ng-app="spectacleStore">
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
